<resources>
    <string name="app_name">故事汇</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading_image_summary">将会耗费大量流量</string>
    <string name="loading_image_title">加载图片（未开发）</string>
    <string name="project_address_message">https://github.com/WenAndWen/StoryWen</string>
    <string name="project_address_title">开源地址</string>
    <string name="change_theme_title">主题切换</string>

    <string-array name="change_theme_items">
        <item>知乎蓝</item>
        <item>水鸭绿</item>
        <item>哔哩粉</item>
    </string-array>

    <string-array name="change_theme_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
